// Vitest Snapshot v1

exports[`ListDOMSerializer > can serialize list nodes into <ol> 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="prosemirror-flat-list"
      data-list-type="ordered"
    >
      <p>
        A
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="ordered"
    >
      <p>
        B
      </p>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes into <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="prosemirror-flat-list"
      data-list-type="bullet"
    >
      <p>
        A
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="bullet"
    >
      <p>
        B
      </p>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes with different types into a single <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="prosemirror-flat-list"
      data-list-type="bullet"
    >
      <p>
        A
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="task"
    >
      <p>
        B
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="toggle"
    >
      <p>
        C
      </p>
    </li>
  </ul>
  <ol>
    <li
      class="prosemirror-flat-list"
      data-list-type="ordered"
    >
      <p>
        D
      </p>
    </li>
  </ol>
  <ul>
    <li
      class="prosemirror-flat-list"
      data-list-type="bullet"
    >
      <p>
        D
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="task"
    >
      <p>
        E
      </p>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-type="toggle"
    >
      <p>
        D
      </p>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize nested list node  1`] = `
<DocumentFragment>
  <ul>
    <li
      class="prosemirror-flat-list"
      data-list-collapsable=""
      data-list-type="bullet"
    >
      <p>
        A
      </p>
      <ol>
        <li
          class="prosemirror-flat-list"
          data-list-type="ordered"
        >
          <p>
            B
          </p>
        </li>
        <li
          class="prosemirror-flat-list"
          data-list-type="ordered"
        >
          <p>
            C
          </p>
        </li>
      </ol>
    </li>
    <li
      class="prosemirror-flat-list"
      data-list-collapsable=""
      data-list-type="bullet"
    >
      <p>
        D
      </p>
      <ol>
        <li
          class="prosemirror-flat-list"
          data-list-type="ordered"
        >
          <p>
            E
          </p>
        </li>
        <li
          class="prosemirror-flat-list"
          data-list-type="ordered"
        >
          <p>
            F
          </p>
        </li>
      </ol>
    </li>
  </ul>
</DocumentFragment>
`;
